# simple-gtkmm-4-project

./: README.md
gtkmm-hello-world/: CMakeLists.txt  copy_dependencies.bat
