cmake_minimum_required(VERSION 3.5)
project(gtkmm-hello-world VERSION 1.0 LANGUAGES CXX)
set(BIN_DIR ${CMAKE_SOURCE_DIR}/${CMAKE_BUILD_TYPE}/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${BIN_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${BIN_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BIN_DIR})
set(PROJECT_SOURCES_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
set(PROJECT_HEADERS_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")
set(PROJECT_SOURCES_FILES "main.cpp"#[[*.cpp]])
list(TRANSFORM PROJECT_SOURCES_FILES PREPEND "${PROJECT_SOURCES_DIR}/")
add_executable(${PROJECT_NAME} #[[WIN32]] ${PROJECT_SOURCES_FILES})
find_package(PkgConfig REQUIRED)
pkg_check_modules(GTKMM REQUIRED "gtkmm-4.0")
target_link_libraries(${PROJECT_NAME} ${GTKMM_LIBRARIES})
target_include_directories(${PROJECT_NAME} PUBLIC ${GTKMM_INCLUDE_DIRS} ${PROJECT_HEADERS_DIR})
target_compile_options(${PROJECT_NAME} PUBLIC ${GTKMM_CFLAGS_OTHER})
if(WIN32)
    add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD COMMAND cmd /C "${CMAKE_CURRENT_SOURCE_DIR}/copy_dependencies.bat" ${CMAKE_BUILD_TYPE} ${PROJECT_NAME} "C:/msys64/ucrt64")
endif()
